# BGE

./: .gitignore  BUILD_STATUS.md  CMakeLists.txt  Engine.cpp  Engine.h  EventHandler.h  Grid.cpp  Grid.h  MaterialRegistry.cpp  MaterialRegistry.h  PHASE2_DEVELOPMENT_STRATEGY.md  PHASE2_MILESTONE_1.md  PHYSICS_FIXES.md  README.md  Renderer.cpp  Renderer.h  UIManager.cpp  UIManager.h  Window.cpp  Window.h  config.ini  main.cpp  test_includes.cpp  test_simple.cpp
AI/: AISystem.cpp  AISystem.h  CMakeLists.txt
AI/BehaviorTree/: BTNode.h  BehaviorTree.cpp  BehaviorTree.h  CompositeNode.cpp  CompositeNode.h  SelectorNode.cpp  SelectorNode.h  SequenceNode.cpp  SequenceNode.h
AI/Pathfinding/: Pathfinder.cpp  Pathfinder.h
AssetPipeline/: AssetHandle.cpp  AssetHandle.h  AssetManager.cpp  AssetManager.h  AssetRegistry.cpp  AssetRegistry.h  CMakeLists.txt  IAsset.h  IAssetLoader.cpp  IAssetLoader.h  README.md
Audio/: AudioSystem.cpp  AudioSystem.h  CMakeLists.txt
Core/: Application.cpp  Application.h  AssetTypes.h  CMakeLists.txt  CMakeLists_minimal.txt  Components.cpp  Components.h  ConfigManager.cpp  ConfigManager.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EventBus.cpp  EventBus.h  Events.h  ISystem.h  Logger.cpp  Logger.h  ServiceLocator.cpp  ServiceLocator.h  Services.cpp  Services.h  SystemManager.cpp  SystemManager.h
Core/ECS/: Archetype.cpp  Archetype.h  ArchetypeManager.h  COMPILATION_FIXES.md  CachedEntityQuery.h  ComponentRegistry.cpp  ComponentRegistry.h  ComponentStorage.h  ComponentVersion.h  ECSConfig.h  ECSConstants.h  ECSMinimal.cpp  ECSResult.h  ECS_REVIEW_REPORT.md  EntityID.h  EntityManager.cpp  EntityManager.h  EntityManagerCompat.h  EntityQuery.cpp  EntityQuery.h  IMPLEMENTATION_STATUS.md  LegacyCompat.h  LegacyEntityWrapper.h  MemoryPool.h  PooledComponentStorage.h  README.md  SpatialIndex.h  System.cpp  System.h  SystemManager.cpp  SystemManager.h  ThreadSafeEntityManager.h
Core/ECS/Components/: CoreComponents.h  GameplayComponents.h
Core/ECS/Systems/: MovementSystem.h
Core/Input/: CategorizedMaterialPalette.cpp  CategorizedMaterialPalette.h  InputManager.cpp  InputManager.h  Keyboard.cpp  Keyboard.h  MaterialBrush.cpp  MaterialBrush.h  MaterialPalette.cpp  MaterialPalette.h  MaterialTools.cpp  MaterialTools.h  Mouse.cpp  Mouse.h
Core/Math/: Math.cpp  Math.h  Matrix4.cpp  Matrix4.h  Quaternion.h  Ray.h  Vector2.h  Vector3.h  Vector4.h
Core/Memory/: Allocator.cpp  Allocator.h  MemoryPool.cpp  MemoryPool.h
Core/Platform/: Platform.h  Window.h
Core/Platform/Windows/: WindowWin32.cpp
Core/Systems/: ISystem.h  SystemManager.cpp  SystemManager.h  TransformSystem.cpp  TransformSystem.h
Core/Threading/: JobSystem.cpp  JobSystem.h  ThreadPool.cpp  ThreadPool.h
Core/Time/: Clock.cpp  Clock.h  Timer.cpp  Timer.h
Core/UI/: ApplicationUI.cpp  ApplicationUI.h  AssetBrowserPanel.cpp  AssetBrowserPanel.h  DebugToolbarPanel.cpp  DebugToolbarPanel.h  DockNode.cpp  DockNode.h  DockingSystem.cpp  DockingSystem.h  GameViewportPanel.cpp  GameViewportPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  IconManager.cpp  IconManager.h  InspectorPanel.cpp  InspectorPanel.h  LayoutInfo.h  LayoutSerializer.cpp  LayoutSerializer.h  MaterialEditorUI.cpp  MaterialEditorUI.h  MaterialPalettePanel.cpp  MaterialPalettePanel.h  Panel.h  PanelManager.h  README.md  SceneViewPanel.cpp  SceneViewPanel.h  TabbedPanel.cpp  TabbedPanel.h  UISystem.cpp  UISystem.h  UnityLayoutManager.cpp  UnityLayoutManager.h
Core/UI/Docking/: DockNode.h  DockingSystem.cpp  DockingSystem.h  LayoutData.cpp  LayoutData.h
Core/UI/Framework/: Panel.h  PanelManager.h  UISystem.cpp  UISystem.h
Core/UI/Gizmos/: Gizmo2D.cpp  Gizmo2D.h  GizmoRenderer.cpp  GizmoRenderer.h  TransformGizmo.cpp  TransformGizmo.h
Core/UI/Layout/: UnityLayoutManager.h
Core/UI/Legacy/: MaterialEditorUI.cpp  MaterialEditorUI.h  TabbedPanel.h
Core/UI/Panels/: ArchetypeDebuggerPanel.cpp  ArchetypeDebuggerPanel.h  AssetBrowserPanel.cpp  AssetBrowserPanel.h  ConsolePanel.cpp  ConsolePanel.h  ECSInspectorPanel.cpp  (+21 more)
Editor/: CMakeLists.txt  EditorSystem.cpp  EditorSystem.h
Examples/: CMakeLists.txt
Examples/AI_Demo/: CMakeLists.txt  main.cpp
Examples/BasicSandbox/: CMakeLists.txt  main.cpp
Examples/DockingSystemExample/: CMakeLists.txt  main.cpp
Examples/ECSDemo/: CMakeLists.txt  main.cpp
Examples/FullDemo/: CMakeLists.txt  main.cpp
Examples/HotReloadingTest/: CMakeLists.txt  main.cpp
Examples/InteractiveEditor/: CMakeLists.txt  config.ini  main.cpp
Examples/LightingDemo/: CMakeLists.txt  main.cpp
Examples/MaterialEditor/: CMakeLists.txt  main.cpp
Examples/PhysicsDemo/: CMakeLists.txt  main.cpp
Examples/ProceduralWorld/: CMakeLists.txt  main.cpp
Examples/SystemsDemo/: CMakeLists.txt  main.cpp
Renderer/: CMakeLists.txt  CommandBuffer.h  GraphicsAPI.h  ParticleSystem.cpp  ParticleSystem.h  Pipeline.h  PixelCamera.cpp  PixelCamera.h  PostProcessor.cpp  PostProcessor.h  RenderDevice.cpp  RenderDevice.h  Renderer.cpp  Renderer.h  Texture.h
Renderer/Lighting/: LightingSystem.h  Raytracer2D.h
Renderer/Shaders/: raytracing.comp
Renderer/Vulkan/: VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanRenderer.cpp  VulkanRenderer.h
Runtime/: CMakeLists.txt  RuntimeSystem.cpp  RuntimeSystem.h
Scripting/: CMakeLists.txt  ScriptingSystem.cpp  ScriptingSystem.h
Simulation/: CMakeLists.txt  CellularAutomata.cpp  CellularAutomata.h  SimulationWorld.cpp  SimulationWorld.h
Simulation/Compute/: SimulationCompute.cpp  SimulationCompute.h
Simulation/Materials/: Material.cpp  Material.h  MaterialDatabase.cpp  MaterialDatabase.h  MaterialSystem.cpp  MaterialSystem.h  OpticalProperties.h
Simulation/Physics/: Collision.cpp  Collision.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h
Simulation/Systems/: MovementSystem.cpp  MovementSystem.h  MovementSystemECS.cpp
Simulation/World/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  WorldGenerator.cpp  WorldGenerator.h
Tests/: CMakeLists.txt
Tests/ECS/: CMakeLists.txt  ThreadSafetyTests.cpp
(+21 files in other folders)
