# BGE Tests
# Currently minimal implementation

# Uncomment when tests are implemented
# enable_testing()

# add_executable(BGETests
#     main.cpp
#     # Add test files here
# )

# target_link_libraries(BGETests PRIVATE 
#     BGECore 
#     BGESimulation 
#     BGERenderer
# )

# add_test(NAME BGETests COMMAND BGETests)

# Placeholder to prevent CMake errors
add_custom_target(BGETests_placeholder
    COMMAND ${CMAKE_COMMAND} -E echo "Tests not implemented yet"
)